<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mBody"
    style="@style/Body1"
    tools:context=".Main">

    <View
        android:id="@+id/mMotor"
        style="@style/Motor1"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mToolbar"
        style="@style/Toolbar1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:maxButtonHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:subtitle="@string/mtbSubtitle"
        app:subtitleTextColor="@color/mTBSTT"
        app:titleTextColor="@color/mTBTT" />

    <View
        android:id="@+id/mBG"
        style="@style/BG1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.684"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/mBodyLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mToolbar"
        app:layout_constraintWidth_percent="0.72">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/mLoginBorder"
            android:padding="1dp">

            <LinearLayout
                android:id="@+id/mLogin2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/mLogin"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <!--Should NOT break!!! -->
                <TextView
                    android:id="@+id/mLTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/mLTitleV"
                    android:padding="7dp"
                    android:text="@string/mLTitle"
                    android:textAlignment="center"
                    android:textColor="@color/mLTitleT"
                    android:textSize="29sp"
                    android:textStyle="bold" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/mLUserBorder"
                    style="@style/mLoginETBorder">

                    <EditText
                        android:id="@+id/mLUser"
                        style="@style/mLoginET"
                        android:hint="@string/mLUserH"
                        android:inputType="text"
                        android:maxLength="20"
                        android:textDirection="rtl"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/mLPassBorder"
                    style="@style/mLoginETBorder">

                    <EditText
                        android:id="@+id/mLPass"
                        style="@style/mLoginET"
                        android:hint="@string/mLPassH"
                        android:inputType="textPassword"
                        android:maxLength="20"
                        android:textAlignment="textEnd"
                        android:textDirection="ltr"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <CheckBox
                    android:id="@+id/mLReme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="17dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="17dp"
                    android:background="@drawable/square_1_tp_to_orange_alpha_xml"
                    android:checked="false"
                    android:layoutDirection="ltr"
                    android:padding="4dp"
                    android:text="@string/mLRemeH"
                    android:textAlignment="textStart"
                    android:textColor="@color/mLReme"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/mLSUExpand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="17dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="17dp"
                    android:background="@drawable/square_1_tp_to_orange_alpha_xml"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="4dp">

                    <ImageView
                        android:id="@+id/mLSUExpPointer"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:rotation="-90"
                        android:src="@drawable/pointer_1_orange_xml" />

                    <TextView
                        android:id="@+id/mLSUExpTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="5dp"
                        android:text="@string/mLSUExpTV"
                        android:textColor="@color/mLSUExpTV"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/mLSignUpCl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/mLSignUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/mLRPasBorder"
                            style="@style/mLoginETBorder">

                            <EditText
                                android:id="@+id/mLRPas"
                                style="@style/mLoginET"
                                android:hint="@string/mLRPasH"
                                android:inputType="textPassword"
                                android:maxLength="20"
                                android:textAlignment="textEnd"
                                android:textDirection="ltr"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/mLNameBorder"
                            style="@style/mLoginETBorder">

                            <EditText
                                android:id="@+id/mLName"
                                style="@style/mLoginET"
                                android:hint="@string/mLNameH"
                                android:inputType="text"
                                android:maxLength="20"
                                android:textDirection="rtl"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/mLAdmnBorder"
                            style="@style/mLoginETBorder">

                            <View
                                android:id="@+id/mLAdmnBG"
                                android:layout_width="0dp"
                                android:layout_height="0dp"
                                android:background="@color/mLoginETV"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <Spinner
                                android:id="@+id/mLAdmn"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layoutDirection="rtl"
                                android:paddingStart="20dp"
                                android:paddingTop="7dp"
                                android:paddingEnd="13dp"
                                android:paddingBottom="7dp"
                                android:textDirection="ltr"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:id="@+id/mLBorderBottom"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="17dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginEnd="17dp"
                    android:background="@color/mLBorderBottom" />

                <LinearLayout
                    android:id="@+id/mButtons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/mLGo"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:background="@color/mLGo"
                        android:src="@drawable/true_1_orange_xml" />

                    <ImageView
                        android:id="@+id/mLReset"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:layout_marginStart="27dp"
                        android:background="@color/mLReset"
                        android:src="@drawable/false_1_orange_xml" />
                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>